# dcode

./: .gitignore  .gitmodules  README.md  future.txt  pyproject.toml
configs/: machine.json
scripts/: download_data.py  generate_dataset.py  run_sweep.py  upload_dataset.py  upload_model.py  upload_sd_gcode.py  upload_to_hub.py
src/dcode/: __init__.py  cli.py  config.py  converter.py  data.py  dataset.py  diffusion.py  gcode.py  imagenet_classes.py  inference.py  inference_diffusion.py  models.py  sd_gcode.py  train.py  train_diffusion.py  train_sd_gcode.py  train_sd_gcode_v2.py  train_sd_gcode_v3.py  turtle.py  validator.py
